--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html>
+<head>
+<style>
+.Title{
+	Background-color:#FFF;<!white>
+	margin:20px;
+    padding:20px;
+}
+</style>
+</head>
+<body style="background:#CCC">
 
-<body>
-
-<h1> OK..... </h1>
+<br/><br/><br/><br/><br/><br/><br/>
+<div class="Title">
+<br/><br/>
+<h1 style="font-family:Verdana; text-align:center;">	Welcome to my world </h1>
+</div>
 
 </body>
 </html>
