--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
 <style>
 .Title{
-	Background-color:#FFF;<!white>
+	Background-color:#FFF;	<!white>
 	margin:20px;
     padding:20px;
 }
 </style>
 </head>
-<body style="background:#CCC">
+<body style="background:#CCC">	<!gray>
 
 <br/><br/><br/><br/><br/><br/><br/>
 <div class="Title">
-<br/><br/>
-<h1 style="font-family:Verdana; text-align:center;">	Welcome to my world </h1>
+<h1 style="font-family:Verdana; text-align:center;">	Welcome to my world! </h1>
 </div>
 
 </body>
