--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <style>
 .Title{
 	Background-color:#FFF;	<!white>
-	margin:20px;
+	margin:0 auto;
     padding:20px;
+	width:500px;
+	text-align:center;
 }
 </style>
 </head>
-<body style="background:#CCC">	<!gray>
+<body style="background:#CCC;">	<!gray>
 
 <br/><br/><br/><br/><br/><br/><br/>
-<div class="Title">
-<h1 style="font-family:Verdana; text-align:center;">	Welcome to my world! </h1>
+<center>
+<div class="Title" >
+<h1 style="font-family:Verdana;" >	Welcome to my world! </h1>
 </div>
+</center>
 
 </body>
 </html>
