--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 <style>
 .Title{
-	Background-color:#FFF;	<!white>
+	Background-color:#CCC;	<!white>
 	margin:0 auto;
-    padding:20px;
+    	padding:20px;
 	width:500px;
 	text-align:center;
 	margin: 0 auto;
+	-moz-box-shadow: 2px 2px 10px #333;
+	-webkit-box-shadow: 2px 2px 10px #333;
+	box-shadow:2px 2px 10px #333;
+	border-radius:50px 0;
 }
 </style>
 </head>
-<body style="background:#CCC;">	<!gray>
+<body background="https://ancestor-cell.github.io/worldline/images/sss.png">	<!gray>
 
-<br/><br/><br/><br/><br/><br/><br/>
+<br/><br/><br/>
 <center>
 <div class="Title" >
-<h1 style="font-family:Verdana;" >	Welcome to my world! </h1>
+<h1 style="font-family:Verdana;" >	Welcome to my world. </h1>
 </div>
 </center>
 
