--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <style>
+
 .Title{
 	Background-color:#CCC;	<!white>
 	margin:0 auto;
@@ -16,14 +17,16 @@
 }
 </style>
 </head>
-<body background="https://ancestor-cell.github.io/worldline/images/sss.png">	<!gray>
+<body style="background-attachment: fixed;"	
+background="https://Ancestor-Cell.github.io/worldline/images/BackGround_Index (1).png">	
 
 <br/><br/><br/>
 <center>
 <div class="Title" >
-<h1 style="font-family:Verdana;" >	Welcome to my world. </h1>
+<h1 style="font-family:'Trebuchet MS', Arial, Helvetica, sans-serif" >	Welcome to my world. </h1>
 </div>
 </center>
 
 </body>
+
 </html>
