--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body style="background-attachment: fixed;"	
-background="https://Ancestor-Cell.github.io/worldline/images/BackGround_Index .png">	
+background="https://Ancestor-Cell.github.io/worldline/images/BackGround_Index (1).png">	
 
 <br/><br/><br/>
 <center>
